<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Bantuan Sosial Detector</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="blank"> </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="image_logo">Image logo</string>
    <string name="submit">Submit</string>
    <string name="input_your_email">Input your email</string>
    <string name="home">Home</string>
    <string name="delivery">Delivery</string>
    <string name="name">Full Name</string>
    <string name="no_telephone">No Telephone</string>
    <string name="age">Age</string>
    <string name="income">Income</string>
    <string name="job">Job</string>
    <string name="number_of_dependents">Number of dependents</string>
    <string name="id_bansos">Id Bansos</string>
    <string name="result_tracking_your_package">Result tracking your package:</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="set_up_password">Set up password</string>
    <string name="username">Username</string>
    <string name="change_username">Change username</string>
    <string name="profile_updated">User profile updated</string>
    <string name="change_profile">Change profile</string>
    <string name="profile">Profile</string>
    <string name="congratulation">Congratulation</string>
    <string name="sorry">Sorry</string>
    <string name="accepted_message">You are included in the category of \nsocial assistance recipients.</string>
    <string name="declined_message">You do not include into the category of \nsocial assistance recipients</string>
    <string name="illustration_empty">Illustration empty</string>
    <string name="you_haven_t_submitted_yet">You haven\'t submitted yet.</string>
    <string name="status_delivery">Status Delivery</string>
    <string name="add_submission">Add submission</string>
    <string name="address">Address</string>
    <string name="no_nik">No NIK</string>
    <string name="already_submit">Already submit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delivery_waiting">Delivery data will appear hear soon.</string>
    <string name="destination">Destination:</string>
    <string name="status">Status:</string>
    <string name="latest_location">Latest location:</string>
    <string name="no_tracking">No tracking:</string>
</resources>