<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginandsignup.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/image_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/tf_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginEnd="4dp"
        android:textColor="@android:color/holo_red_dark"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/tf_password"
        app:layout_constraintEnd_toStartOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="4dp"
        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/tf_password"
        app:layout_constraintStart_toEndOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonSize="wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>